--- a/src/views/templates/welcome/index.marko
+++ b/src/views/templates/welcome/index.marko
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
       <div class="page-header">
-        <h1>User Form</h1>
+        <h1>User Form, Hello</h1>
       </div>
       <form action="/user/add" method="post" class="jumbotron">
         <div class="form-group">
